# txpools

./: .gitignore  README.md
app/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
app/backend/: config.mjs  db.mjs  decoders.mjs  indexer.mjs  queries.mjs  server.mjs
app/docs/: deployment.md  txline-devnet-setup.md  txpools-sqlite-indexer.md
app/scripts/: txline-devnet-activate.mjs
app/src/: App.vue  main.ts  polyfills.ts  style.css  vite-env.d.ts
app/src/components/: AppNavbar.vue  DataSourceBadge.vue  FlowStepCard.vue  HeroSection.vue  InstructionPreviewBlock.vue  LockUSDCPanel.vue  MatchPoolCard.vue  OutcomeCard.vue  PoolStatsCard.vue  PortfolioTable.vue  SettlementCard.vue  SettlementTable.vue  StatusBadge.vue  TeamBadge.vue  TrustFlowDiagram.vue
app/src/composables/: useInitializedTxPools.ts  useTxLinePools.ts  useTxPoolsAdmin.ts
app/src/data/: mockData.ts
app/src/pages/: AdminPage.vue  HomePage.vue  MatchDetailPage.vue  PoolsPage.vue  PortfolioPage.vue  (+2 more)
docs/: submission-video-script.md
programs/txpools/: Cargo.toml  devnet-program-info.txt
programs/txpools/src/: error.rs  lib.rs  txline.rs
programs/txpools/src/instructions/: claim_winnings.rs  initialize_config.rs  initialize_pool.rs  lock_prediction.rs  mod.rs  resolve_pool.rs  sweep_unclaimed_pool.rs  token.rs
programs/txpools/src/state/: config.rs  mod.rs  pool.rs  position.rs  token.rs
programs/txpools/tests/: mollusk_txpools.rs
programs/txpools/tests/mock_txline/: Cargo.toml
programs/txpools/tests/mock_txline/src/: lib.rs
(+26 files in other folders)
