[package]
name = "txpools"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
five8_const = "0.1.4"
pinocchio = { version = "0.11.1", features = ["cpi"] }
pinocchio-system = "0.6.1"
pinocchio-token = "0.6.0"
solana-address = { version = "2.6.0", features = ["curve25519", "syscalls"] }

[dev-dependencies]
mollusk-svm = "0.12.0"
mollusk-svm-programs-token = "0.12.0"
solana-account = "3.4.0"
solana-instruction = "3.3.0"
solana-program-pack = "3.1.0"
solana-pubkey = "4.1.0"
solana-rent = "3.1.0"
solana-sdk-ids = "3.1.0"
spl-token-interface = "2.0.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
