[package]
name = "mock_txline"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
five8_const = "1.0.0"
pinocchio = "0.11.2"
solana-address = { version = "2.6.0", features = ["curve25519", "decode", "syscalls"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
